# FastTask

./: .gitignore  README.md  main.py  pyproject.toml
src/: example.env  main.py
src/api/: __init__.py
src/api/auth/: utils.py
src/api/v1/: __init__.py  shemas.py
src/api/v1/auth/: dependencies.py  endpoint.py  service.py  utils.py  views.py  views_utils.py
src/api/v1/board/: endpoint.py
src/api/v1/rooms/: endpoint.py
src/api/v1/user/: service.py  views.py
src/api/v1/users/: shemas.py
src/core/: app.py  logger.py  settings.py
src/database/: mixin.py  model.py  session.py
test/: conftest.py  test_database.py
